# Collie

./: .gitmodules  BaseTest.cpp  CMakeLists.txt  HttpHandler.cpp  HttpHandler.hpp  HttpHeader.cpp  HttpHeader.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpServ.cpp  HttpServ.hpp  Httpd.cpp  Httpd.hpp  Makefile  README.md  TcpSocket.cpp  TcpSocket.hpp  Utility.cpp  http_serv.cpp  http_serv.hpp  httpd.cpp  httpd.hpp  logging.conf  main.cpp  tcp_socket.cpp  tcp_socket.hpp
base/: Acceptor.cpp  Acceptor.hpp  Callback.hpp  Channel.cpp  Channel.hpp  EPoller.cpp  EPoller.hpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  EventType.hpp  Socket.cpp  Socket.hpp  SocketAddress.cpp  SocketAddress.hpp  StringHelper.hpp  TcpServer.cpp  TcpServer.hpp  TcpSocket.cpp  TcpSocket.hpp  Utility.cpp  Utility.hpp
collie/: .clang_complete  AsyncIOStream.h  Bytes.h  CMakeLists.txt  EPollPoller.cc  EPollPoller.h  EventPool.cc  EventPool.h  EventThreadPool.cc  EventThreadPool.h  EventType.h  InetAddress.cc  InetAddress.h  LogHandler.cc  LogHandler.h  LogLib.h  LogStream.cc  LogStream.h  Logger.cc  Logger.h  NonCopyable.h  Poller.cc  Poller.h  String.h  ThreadPool.cc  ThreadPool.h  timer.cc
collie/base/: EPoller.hpp  Exception.hpp  Global.hpp  StringHelper.hpp  ThreadPool.hpp
collie/base/event/: Channel.cpp  Channel.hpp  EventLoop.cpp  EventLoop.hpp
collie/base/poll/: EPollPoller.cpp  EPollPoller.hpp  PollPoller.hpp  Poller.hpp
collie/example/: AsyncEchoServer.cc  CMakeLists.txt  EchoServer.cc  InetAddress.cc
collie/http/: HTTPBase.h  HTTPResponse.h  HTTPServer.cc  HTTPServer.h
collie/network/: Connection.hpp  Network.hpp  Socket.cpp  Socket.hpp  SocketAddress.cpp  SocketAddress.hpp
collie/network/http/: Common.cpp  Request.hpp  Response.hpp  Server.cpp  Server.hpp
collie/network/tcp/: Acceptor.hpp  Channel.hpp  EventLoop.cpp  EventLoop.hpp  TcpServer.hpp  TcpSocket.cpp  TcpSocket.hpp
collie/tcp/: AsyncTCPServer.cc  AsyncTCPServer.h  AsyncTCPStream.cc  AsyncTCPStream.h  TCPClient.cc  TCPClient.h  TCPServer.cc  TCPServer.h  TCPSocket.cc  TCPSocket.h  TCPStream.cc  TCPStream.h
collie/test/unittests/: CMakeLists.txt  main.cc
examples/: AsyncEchoServer.cc  CMakeLists.txt  EchoClient.cc  EchoServer.cc  InetAddress.cc  MultiThreadEchoServer.cpp  TCPEchoClient.cpp  TCPEchoServer.cpp  TCPFileClient.cpp  TCPFileServer.cpp  UDPEchoClient.cpp  UDPEchoServer.cpp  async_echo_server.cc  async_echo_server.cc.bak  echo_client.cc  echo_server.cc  inet_address.cc  logger.cc.bak  multithread_tcp_echo_server.cc  tcp_echo_client.cc  tcp_echo_server.cc  tcp_file_client.cc  tcp_file_server.cc  udp_echo_client.cc  udp_echo_server.cc
http/: Application.cpp  Application.hpp  Common.hpp  Header.cpp  Header.hpp  HttpServ.cpp  HttpServ.hpp  Request.cpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  Response.cpp  Response.hpp  StaticFileHandler.cpp  StaticFileHandler.hpp  Utility.cpp  Utility.hpp
inc/: async_tcp_server.h  async_tcp_stream.h  collie.h  inet_address.h  log_handler.h  log_stream.h  logger.h  socket.h  tcp_client.h  tcp_server.h  tcp_stream.h  timer.h
inc/base/: AsyncIOStream.h  EPollPoller.h  EventPool.h  EventThreadPool.h  EventType.h  InetAddress.h  LogHandler.h  LogLib.h  LogStream.h  Logger.h  Poller.h  Serializable.h  Socket.h  String.h  ThreadPool.h  inet_address.h  log_handler.h  log_stream.h  socket.h  timer.h
inc/http/: HTTPBase.h  HTTPHeader.h  HTTPRequest.h  HTTPServer.h
inc/poll/: async_io_stream.h  epoll_poller.h  event_pool.h  event_thread_pool.h  poller.h
inc/tcp/: AsyncTCPServer.h  AsyncTCPStream.h  TCPClient.h  TCPServer.h  TCPSocket.h  TCPStream.h  tcp_client.h  tcp_server.h  tcp_socket.h
inc/util/: descriptor.h  iterable.h  iterator.h  noncopyable.h  string.h
include/: Buffer.hpp  Connection.hpp  Descriptor.hpp  Exception.hpp  Global.hpp  InetAddress.hpp  Socket.hpp  SocketAddress.hpp  ThreadPool.hpp  Type.hpp  descriptor.h  exception.h  inet_address.h  logging.h  socket.h
include/event/: Channel.hpp  EventLoop.hpp  EventLoopThreadPool.hpp  ThreadPool.hpp  channel.h  epoller.h  eventloop.h  threadpool.h  (+1 more)
lib/: CMakeLists.txt  Descriptor.cpp  InetAddress.cpp  Socket.cpp  SocketAddress.cpp  Utils.cpp  Utils.hpp  async_tcp_server.cc  async_tcp_stream.cc  descriptor.cc  inet_address.cc  socket.cc  tcp_socket.cc  timer.cc
lib/base/: EPollPoller.cc  EventPool.cc  EventThreadPool.cc  InetAddress.cc  LogHandler.cc  LogStream.cc  Logger.cc  Poller.cc  Socket.cc  String.cc  inet_address.cc  log_stream.cc
lib/event/: Channel.cpp  EventLoop.cpp  EventLoopThreadPool.cpp  ThreadPool.cpp  channel.cc  epoller.cc  eventloop.cc  eventloop_threadpool.cc  threadpool.cc
lib/http/: HTTPRequest.cc  HTTPServer.cc
lib/network/: Socket.cpp
lib/network/tcp/: Acceptor.cpp  Connector.cpp  TcpClient.cpp  TcpSocket.cpp
lib/poll/: EPollPoller.cpp  Poller.cpp  epoll_poller.cc  event_pool.cc  event_thread_pool.cc  poller.cc
lib/tcp/: Acceptor.cpp  AsyncTCPServer.cc  AsyncTCPStream.cc  Connector.cpp  TCPAcceptor.cpp  TCPClient.cc  TCPClient.cpp  TCPConnection.cpp  TCPServer.cc  TCPServer.cpp  TCPSocket.cc  TCPSocket.cpp  TCPStream.cc  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  TcpSocket.cpp  async_tcp_server.cc  tcp_acceptor.cc  tcp_client.cc  tcp_connection.cc  tcp_connector.cc  tcp_iostream.cc  tcp_server.cc  tcp_socket.cc  tcp_stream.cc
lib/udp/: UDPClient.cpp  UDPServer.cpp  UDPSocket.cpp  udp_client.cc  udp_server.cc  udp_socket.cc
lib/util/: NonCopyable.cc  noncopyable.cc
lib/utils/: File.cpp  file.cc  file.cpp  survival_time.cc
refactoring/: CMakeLists.txt
refactoring/examples/: CMakeLists.txt  echo_server.cc  tcp_server.cc
refactoring/lib/: CMakeLists.txt  inet_address.cc  log_handler.cc  log_stream.cc  logger.cc  tcp_client.cc  tcp_server.cc  tcp_stream.cc  thread_pool.cc
refactoring/lib/poll/: epoll_poller.cc  event_pool.cc  poller.cc
test/: BaseTest.cpp  CMakeLists.txt  EchoClient.cpp  EchoServer.cpp  MultiThreadEchoServer.cpp  SocketTest.cpp  UDPEchoClient.cpp  UDPEchoServer.cpp
test/unittests/: HTTPBase.cc  HTTPRequest.cc  InetAddress.cc  String.cc
(+64 files in other folders)
