CMAKE_MINIMUM_REQUIRED(VERSION 3.2.2)
project(Collie)
set(CMAKE_C_COMPILER /usr/bin/clang)
set(CMAKE_CXX_COMPILER /usr/bin/clang++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++11")
add_subdirectory(lib)
add_subdirectory(test)
install(DIRECTORY include/ DESTINATION /usr/local/collie)
