add_executable(multithread_tcp_echo_server multithread_tcp_echo_server)
add_executable(tcp_echo_server tcp_echo_server)
add_executable(tcp_echo_client tcp_echo_client)
add_executable(tcp_file_server tcp_file_server)
add_executable(tcp_file_client tcp_file_client)
add_executable(udp_echo_server udp_echo_server)
add_executable(udp_echo_client udp_echo_client)
target_link_libraries(tcp_echo_server collie /usr/local/lib/liblogger.a)
target_link_libraries(multithread_tcp_echo_server collie /usr/local/lib/liblogger.a)
target_link_libraries(tcp_echo_client collie /usr/local/lib/liblogger.a)
target_link_libraries(udp_echo_server collie /usr/local/lib/liblogger.a)
target_link_libraries(udp_echo_client collie /usr/local/lib/liblogger.a)
target_link_libraries(tcp_file_server collie /usr/local/lib/liblogger.a)
target_link_libraries(tcp_file_client collie /usr/local/lib/liblogger.a)
