add_executable(EchoServer EchoServer)
add_executable(MultiThreadEchoServer MultiThreadEchoServer)
add_executable(EchoClient EchoClient)
add_executable(UDPEchoServer UDPEchoServer)
add_executable(UDPEchoClient UDPEchoClient)
target_link_libraries(EchoServer collie /usr/local/lib/liblogger.a)
target_link_libraries(MultiThreadEchoServer collie /usr/local/lib/liblogger.a)
target_link_libraries(EchoClient collie /usr/local/lib/liblogger.a)
target_link_libraries(UDPEchoServer collie /usr/local/lib/liblogger.a)
target_link_libraries(UDPEchoClient collie /usr/local/lib/liblogger.a)
